Cambios Fecha Efectiva masiva.